# rephraze-backend

./: .gitignore  Cargo.toml  README.md  opencode.json
.ctx/: graph.db
.ctx/cache/: read-session.json
ci-workflows/github/: audit.yml  general.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/src/routes/: health_check.rs
crates/api/tests/: health_check_test.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: configuration.rs
src/: lib.rs
