[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/infrastructure",
  "crates/api",
  "crates/worker",
]
resolver = "3"

[workspace.dependencies]
serde = {version = "1.0.228", features = {"derive"}
tracer =  "0.1.44"
tokio = {version = "1.52.3", features = {"rt-multi-thread", "macros"} }
